Bugfixes and improvements on the theme styling opt 1. Text in the note creation area for dark mode are now visible. 2. Topbar takes less space. 3. Changing themes doesn't change other preferences anymore.

--- a/quill/quill.notes.css
+++ b/quill/quill.notes.css
@@ -845,6 +845,7 @@
 }
 .ql-toolbar.ql-snow {
   border: 1px solid #ccc;
+  background-color: #efefef;
   box-sizing: border-box;
   font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
   padding: 8px;
